--- a/css/site.css
+++ b/css/site.css
@@ -8,6 +8,11 @@ body {
 	margin: 3em;
 }
 
+h1 {
+	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+	font-weight: 800;
+}
+
 canvas.border {
 	border: solid 1px black;
 }
